# CostOptimizer

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: deploy-rpi.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: ArchitectureAdvisorPage.tsx  BillingPage.tsx  BudgetsPage.tsx  CloudAccountsPage.tsx  CompliancePage.tsx  CostExplorerPage.tsx  DashboardPage.tsx  LoadBalancingPage.tsx  LoginPage.tsx  MonitoringPage.tsx  RecommendationsPage.tsx  ReservationAdvisorPage.tsx  ResourceDetailPage.tsx  ResourcesPage.tsx  SavingsPlansPage.tsx  SecurityPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: accountContext.tsx  auth.ts
frontend/src/styles/: index.css
frontend/src/utils/: formatters.ts
infrastructure/kubernetes/: deployment.yaml
migrations/: env.py
scripts/: finetune.sh  setup.sh
src/api/: main.py  websocket_manager.py
src/api/middleware/: tenant.py
src/api/routes/: architecture.py  (+15 more)
src/core/: config.py  database.py  logging.py  security.py
src/engine/: ai_optimizer.py  architecture_advisor.py  attack_prevention.py  compliance_engine.py  infra_analyzer.py  load_balancer_analyzer.py  ml_optimizer.py  ml_savings_engine.py  reservation_advisor.py  rule_engine.py  savings_calculator.py  threat_detector.py
src/ingestion/: base.py
src/llm/: explanation_generator.py  local_llm.py
src/models/: __init__.py  budget.py  cloud_account.py  compliance.py  cost_data.py  integration_config.py  recommendation.py  resource.py  savings.py  security_alert.py  tenant.py
src/normalization/: normalizer.py
src/remediation/: base.py
src/schemas/: auth.py  cloud_account.py  dashboard.py  recommendation.py  resource.py
src/services/: budget_service.py  cost_explorer_service.py  jira_service.py  optimization_service.py  realtime_service.py  report_service.py  savings_plans_service.py  sync_service.py
src/workers/: celery_app.py  tasks.py
tests/: conftest.py
(+27 files in other folders)
